--- a/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
+++ b/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
@@ -9,13 +9,10 @@ description: 'Gain custody of and manage Moongate's automatically generated wall
 
 **Claiming Your Non-Custodial Wallet**
 <Steps>    
-    
-    <Step title="Verify your wallet via email or phone number">
-        Click the settings gear, enter the 'Account and Security' page, and then add an email/phone number.
-        <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/pw setting.png"/>
-        <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/pw acct security.png"/>
-        <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/pw set email.png"/>
-        You will be sent a verification code via email/text message. Please enter this code when prompted.
-        <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/pw enter code.png"/>
+    <Step title="Access your non-custodial wallet">
+        Sign into the Moongate Portal and navigate to the ['Profile' tab](https://app.moongate.id/profile). 
+        Click the arrow under 'Wallet' and then 'Manage Assets' to be taken to your non-custodial wallet.
+        <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/manage assets button.gif"/>
     </Step>
+    
 </Steps>
