--- a/user-guide/managing-wallet/transferring-nft.mdx
+++ b/user-guide/managing-wallet/transferring-nft.mdx
@@ -11,7 +11,11 @@ title: 'Transferring a Ticket/Membership'
     transfers on your behalf.
 </Warning>
 <Steps>    
-    
+    <Step title="Access your non-custodial wallet">
+        Sign into the Moongate Portal and navigate to the ['Profile' tab](https://app.moongate.id/profile). 
+        Click the arrow under 'Wallet' and then 'Manage Assets' to be taken to your non-custodial wallet.
+        <img src="/user-guide/images/managing-wallet/transferring-nft/manage assets button.gif"/>
+    </Step>
     <Step title="Select the NFT you wish to transfer">
         You will be redirected to our wallet partner's page where you can manage your assets. Click on the 'NFT' tab to view the 
         tickets/memberships associated with your account.
