--- a/user-guide/support/user-faq.mdx
+++ b/user-guide/support/user-faq.mdx
@@ -4,7 +4,7 @@ title: 'User FAQs'
 <AccordionGroup>
     <Accordion title="Do I need an existing blockchain wallet to make a purchase on Moongate?">
         No, you don't! When you create a Moongate account via Google or email, Moongate automatically creates a non-custodial wallet for you. You can 
-        manage this wallet under the "[Profile](https://app.moongate.id/profile)" page on our user web portal.
+        manage this wallet under the '[Profile](https://app.moongate.id/profile)' page on our user web portal.
         
         Web3 users with existing wallets creating their Moongate account for the first time can link their wallet both during and after the account creation process. Refer to [our guide](/user-guide/managing-wallet/connecting-wallet) for more information on how to do so.
     </Accordion>
@@ -31,11 +31,7 @@ title: 'User FAQs'
 
         The “Pass” section shows all the tickets/memberships you have acquired using the Moongate platform.        
     </Accordion>
-    <Accordion title="I purchased a ticket administered by Moongate on the secondary market. How will my ticket be authenticated?">
-        Assuming the wallet containing your newly purchased ticket is connected to your Moongate account, you can follow our [check-in guide](/user-guide/the-basics/user-check-in-guide) as usual to successfully check into the event.
-
-        The QR code sent to the original purchaser's email will be automatically invalidated upon transfer, meaning that you don't have to worry about potential duplicate tickets.
-    </Accordion>
+    
     <Accordion title="I can't see my NFT ticket/membership at the user portal.">
         Please ensure that you are logged in with the same account that you used to purchase the NFT tickets. If you continue to experience issues, please 
         [contact us](mailto:support@moongate.id).
