merchant faq back

--- a/support/merchant-faq.mdx
+++ b/support/merchant-faq.mdx
@@ -12,7 +12,11 @@ title: 'Merchant FAQs'
     <Accordion title="How should I interpret the verification results?">
         Please refer to the [Check-in Guide](/check-in/check-in-guide) for details.
     </Accordion>
-    
+    <Accordion title="A user purchased a ticket to my event on the secondary market. How will their ticket be authenticated?">
+        Assuming the wallet containing their newly purchased ticket is connected to their Moongate account, they can follow our [user check-in guide](/user-guide/the-basics/user-check-in-guide) as usual to successfully check into the event.
+
+        The QR code sent to the original purchaser's email will be automatically invalidated upon transfer, eliminating the risk of potential duplicate tickets.
+    </Accordion>
     <Accordion title="How do I check NFT ticket/membership pass ownership in real life using the Moongate Verify App?">
         Please refer to the [Check-in Guide](/check-in/check-in-guide) for details.
     </Accordion>    
