--- a/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
+++ b/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
@@ -3,7 +3,7 @@ title: 'Managing Your Non-Custodial Wallet'
 description: 'Gain custody of and manage Moongate's automatically generated wallet.'
 ---
 <Warning>
-    Moongate has no administrative control over your wallet and its contents, and as such is unable to manage your wallet on your behalf. 
+    Mmoongate has no administrative control over your wallet and its contents, and as such is unable to manage your wallet on your behalf. 
     We recommend contacting [Particle Wallet support](https://discord.com/invite/FB44yXKnRK) if you require additional support.
 </Warning>
 
