--- a/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
+++ b/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
@@ -1,4 +1,4 @@
 ---
-title: 'Managing Your Non-Custodial Wallet'
+title: 'Managing Your Non Custodial Wallet'
 description: 'Gain custody of and manage Moongate's automatically generated wallet.'
 ---
