--- a/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
+++ b/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
@@ -1,4 +1,29 @@
 ---
-title: 'Managing Your Non Custodial Wallet'
-description: 'Gain custody of and manage Moongate's automatically generated wallet.'
+title: 'Managing Your Non-Custodial Wallet'
+description: 'Gain custody of and manage your automatically generated wallet.'
 ---
+<Info>
+    This guide is intended for users whose wallets are the non-custodial variety automatically created by Moongate. If you are 
+    using your own wallet to receive tickets/memberships from Moongate, please refer to your wallet provider's documentation.
+</Info>
+<Warning>
+    Moongate has no administrative control over your wallet and its contents, and as such is unable to manage your wallet on your behalf. 
+    We recommend contacting [Particle Wallet support](https://discord.com/invite/FB44yXKnRK) if you require additional support.
+</Warning>
+
+**Claiming Your Non-Custodial Wallet**
+<Steps>    
+    <Step title="Access your non-custodial wallet">
+        Sign into the Moongate Portal and navigate to the ['Profile' tab](https://app.moongate.id/profile). 
+        Click the arrow under 'Wallet' and then 'Manage Assets' to be taken to your non-custodial wallet.
+        <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/manage assets button.gif"/>
+    </Step>
+    <Step title="Verify your wallet via email or phone number">
+        Click the settings gear, enter the 'Account and Security' page, and then add an email/phone number.
+        <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/pw setting.png"/>
+        <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/pw acct security.png"/>
+        <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/pw set email.png"/>
+        You will be sent a verification code via email/text message. Please enter this code when prompted.
+        <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/pw enter code.png"/>
+    </Step>
+</Steps>
