--- a/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
+++ b/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
@@ -35,7 +35,7 @@ description: 'Gain custody of and manage your automatically generated wallet.'
         <Step title="g">
         </Step>
         <Step title="g">
-            <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/dapp auth flow.gif">
+            <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/orinooco flow.gif">
         </Step>
     </Steps>
 </Accordion>
