--- a/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
+++ b/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
@@ -33,6 +33,7 @@ description: 'Gain custody of and manage your automatically generated wallet.'
 <Accordion title="Signing into DApps With Your Wallet">
     <Steps>
         <Step title="g">
+            asfasf
         </Step>
         <Step title="g">
             <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/orinooco flow.gif">
