--- a/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
+++ b/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
@@ -35,8 +35,8 @@ description: 'Gain custody of and manage your automatically generated wallet.'
         <Step title="g">
             asfasf
         </Step>
-        <Step title="g">
-            <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/orinooco flow.gif">
+        <Step title="gg">
+            <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/orinoco flow.gif">
         </Step>
     </Steps>
 </Accordion>
