--- a/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
+++ b/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
@@ -34,6 +34,7 @@ description: 'Gain custody of and manage your automatically generated wallet.'
     <Steps>
         <Step title="g">
             asfasf
+            <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/dapp connect.png"/>
         </Step>
         <Step title="gg">
             <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/orinoco flow.gif">
