--- a/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
+++ b/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
@@ -30,3 +30,14 @@ description: 'Gain custody of and manage your automatically generated wallet.'
     </Steps>
 </Accordion>
 
+<Accordion title="Signing into DApps With Your Wallet">
+    <Steps>
+        <Step title="g">
+            asfasf
+            <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/dapp connect.png"/>
+        </Step>
+        <Step title="gg">
+            asdfaf
+        </Step>
+    </Steps>
+</Accordion>
