--- a/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
+++ b/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
@@ -38,6 +38,7 @@ description: 'Gain custody of and manage your automatically generated wallet.'
         </Step>
         <Step title="gg">
             asdfaf
+            <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/orinoco flow.gif"/>
         </Step>
     </Steps>
 </Accordion>
