--- a/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
+++ b/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
@@ -32,12 +32,15 @@ description: 'Gain custody of and manage your automatically generated wallet.'
 
 <Accordion title="Signing into DApps With Your Wallet">
     <Steps>
-        <Step title="g">
-            asfasf
+        <Step title="Confirm the DApp supports Particle Wallet sign in">     
+            Check your DApp's sign-in options.       
             <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/dapp connect.png"/>
+            If a DApp supports signing in with Particle wallets, you will see Particle Wallet listead as an option when signing in.
+            <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/particle signin.png"/>
         </Step>
-        <Step title="gg">
-            asdfaf
+        <Step title="Sign in using Particle Wallet">
+            Select the dropdown arrow under the Particle Wallet icon and then select your verification method (email/text message/socials).
+            Follow the given instructions to sucessfully login.
             <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/orinoco flow.gif"/>
         </Step>
     </Steps>
