--- a/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
+++ b/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
@@ -4,10 +4,10 @@ description: 'Gain custody of and manage your automatically generated wallet.'
 ---
 <Info>
     This guide is intended for users whose wallets are the non-custodial variety automatically created by Moongate. If you are 
-    using your own wallet to receive tickets/memberships from Moongate, please refer to your wallet provider's documentation.
+    using your own external wallet please refer to your wallet provider's respective documentation.
 </Info>
 <Warning>
-    Moongate has partnered with Particle Wallet to create non-custodial wallets. As such, Moongate has no administrative control over your wallet and its contents, and as such is unable to manage your wallet on your behalf. 
+    Moongate has partnered with Particle Wallet to create non-custodial wallets. Moongate has no administrative control over your wallet and its contents, and as such is unable to manage your wallet on your behalf. 
     We recommend contacting [Particle Wallet support](https://discord.com/invite/FB44yXKnRK) if you require additional support.
 </Warning>
 
