--- a/get-started/welcome.mdx
+++ b/get-started/welcome.mdx
@@ -7,8 +7,11 @@ description: 'Welcome to the Moongate Merchant guide.'
   src="/images/banner.png"
   alt="Moongate Banner"
 />
-
 ## About Us
+
+<Tip>
+  This guide is intended for merchants and brands using Moongate to manage their events or membership programs. If you are using Moongate to purchase tickets or membership passes, please check out our [user guide here](/user-guide/welcome).
+</Tip>
 
 [Moongate](https://moongate.id) is an all-in-one solution for brands and event organizers to supercharge their community with NFT tickets and memberships that unlock exclusive experiences and benefits. We've built Moongate to make it easy for brands to:
 
@@ -22,4 +25,4 @@ Our platform is built on blockchain technology, enabling vendors to engage with 
 
 The best part? Our platform combines the engagement abilities of Web3 and the blockchain with the familiarity and ease-of-use of Web2, making for a seamless experience for both end users and vendors, enabling them to grow customer lifetime value even without the technical knowledge that is typically associated with Web3.
 
-This guide is intended for merchants and brands using Moongate to manage their events or membership programs. If you are using Moongate to purchase tickets or membership passes, please check out our [user guide here](/user-guide/welcome). If you are interested in learning more about how Moongate can support your business, please book a chat with us via [email](mailto:contact@moongate.id), [Telegram](https://t.me/pweeh), [X DMs](https://twitter.com/messages/compose?recipient_id=1498601983195844608), or [Discord](https://discord.gg/zg8MwKKtuv).
+ If you are interested in learning more about how Moongate can support your business, please book a chat with us via [email](mailto:contact@moongate.id), [Telegram](https://t.me/pweeh), [X DMs](https://twitter.com/messages/compose?recipient_id=1498601983195844608), or [Discord](https://discord.gg/zg8MwKKtuv).
