Welcome change (user)

--- a/user-guide/welcome.mdx
+++ b/user-guide/welcome.mdx
@@ -1,6 +1,10 @@
 ---
 title: 'Welcome'
 ---
+<Tip>
+    This guide is intended for customers who are purchasing/redeeming tickets to events that are ticketed by, or members of membership programs 
+    administered via Moongate. If you are an event organizer or membership program operator, you can find our [Merchant User Guide here](/get-started/welcome).
+</Tip>
 
 [Moongate](https://app.moongate.id) is a Web3 ticketing and membership platform that makes it easy to access a world of exclusive experiences 
 and benefits. Using Moongate, event organizers can issue tickets and memberships as NFTs, enabling them to deliver additional perks and 
@@ -10,7 +14,3 @@ We've built Moongate to deliver a seamless and straightforward a user experience
 power users feel equally at home.
 
 Couldn't find what you're looking for? Please contact us at [support@moongate.id](mailto:support@moongate.id).
-
-This guide is intended for customers who are purchasing/redeeming tickets to events that are ticketed by, or members of membership programs 
-administered via Moongate. If you are an event organizer or membership program operator, you can find our [Merchant User Guide here](/get-started/welcome).
-
