--- a/admin-settings/collecting-payment.mdx
+++ b/admin-settings/collecting-payment.mdx
@@ -5,7 +5,7 @@ title: 'Collecting User Payments'
 <Warning>
     If you are collecting payment for tickets or memberships, you must connect a bank account or crypto wallet to receive your payout. 
     
-    Additionally, you will **not** automatically receive payouts. Please contact [Moongate support](mailto:support@moongate.id) if you will be collecting payment for your event or membership program.
+    Additionally, you will **not** automatically receive payouts. Please contact Moongate support via [email(mailto:support@moongate.id) or [Telegram](https://t.me/pweeh) to request a payout.
 </Warning>
 
 <Steps>
