--- a/user-guide/moonfarmer/moonfarmer-guide.mdx
+++ b/user-guide/moonfarmer/moonfarmer-guide.mdx
@@ -1,3 +1,26 @@
 ---
-title: 'MoonFarmer - How it Works'
+title: 'Moongate Farmer - How it Works'
 ---
+
+## I. How can I become a Moonfarmer?
+Everyone is eligible. Just head to our site [here](https://app.moongate.id/) and earn points by completing tasks and interacting with our partners. 
+
+## II. How do I navigate the platform?
+- **Log in:** Either connect your wallet or sign in using your email (And we will create a non-custodial wallet for you
+- **Discover:** Discover all upcoming Web3 events
+- **Quest:** Check out tasks that can earn you points on our platform
+- **Pass:** Your NFT tickets for your upcoming events
+- **Benefits:** Token-gated benefits associated with the NFTs you own
+- **Leaderboard [to come]:** Check your ranking of the points you earn
+
+## I. Refund Policy
+
+## I. Refund Policy
+
+## I. Refund Policy
+
+## I. Refund Policy
+
+## I. Refund Policy
+
+## I. Refund Policy
