--- a/user-guide/moonfarmer/moonfarmer-guide.mdx
+++ b/user-guide/moonfarmer/moonfarmer-guide.mdx
@@ -6,21 +6,47 @@ title: 'Moongate Farmer - How it Works'
 Everyone is eligible. Just head to our site [here](https://app.moongate.id/) and earn points by completing tasks and interacting with our partners. 
 
 ## II. How do I navigate the platform?
-- **Log in:** Either connect your wallet or sign in using your email (And we will create a non-custodial wallet for you
-- **Discover:** Discover all upcoming Web3 events
-- **Quest:** Check out tasks that can earn you points on our platform
-- **Pass:** Your NFT tickets for your upcoming events
-- **Benefits:** Token-gated benefits associated with the NFTs you own
-- **Leaderboard [to come]:** Check your ranking of the points you earn
+- **Log in:** Either connect your wallet or sign in using your email. If you sign in using your email, we will create a non-custodial wallet for you.
+- **Discover:** Discover all upcoming Web3 events.
+- **Quest:** Check out tasks that can earn you points on our platform.
+- **Pass:** Your NFT tickets for your upcoming events.
+- **Benefits:** Token-gated benefits associated with the NFTs you own.
+- **Leaderboard [to come]:** Check your ranking of the points you earn.
+<img src="/user-guide/images/moonfarmer/moonfarmer-guide/navbar.png"/>
 
-## I. Refund Policy
+## III. How do I earn points?
+It’s straightforward. There are several ways to earn points: 
 
-## I. Refund Policy
+- Complete one-off tasks like onboarding and unlock retroactive airdrops.
+- Test your luck with the daily draw and earn some points every day.
+- Be an active user in our ecosystem: buy tickets, create events, promote campaigns and more.
+- Refer friends — the larger your farmer family, the more points you earn.
+- Check our time-sensitive special missions. Stay alert to seize what rewards you can.
+<img src="/user-guide/images/moonfarmer/moonfarmer-guide/pass page.png"/>
 
-## I. Refund Policy
+## IV. Buy tickets and promote campaign to earn points
+When you click into the “Buy Tickets” and “Promote Campaign” task, you will be directed to our Discover Page. Engage with the events to earn points. 
+<img src="/user-guide/images/moonfarmer/moonfarmer-guide/highlighted event share.png"/>
 
-## I. Refund Policy
+You can then check the points you earned at the Quest page by clicking into the specific task.
+<img src="/user-guide/images/moonfarmer/moonfarmer-guide/special task like rt.png"/>
 
-## I. Refund Policy
+## V. Referral Program: Build your Farmer Network
+Sharing is caring…and earning! Spread the word about MoonFarmer and earn points with every new MoonFarmer who joins through your referral link. 
 
-## I. Refund Policy
+Go to the profile tab, copy your unique link, and send it to friends and family (your Farmer network). On top of a one-off point reward, you earn 15% of your direct referral’s points, and 5% of your referral’s referrals points. 
+
+So, simply said, refer more friends for more points.
+
+## VI. Multiplier: Ramp up with PowerUps
+You can also get PowerUps to get a multiplier event on your points. You can unlock the PowerUps either by gaining enough points or purchasing it. 
+
+For a limited time, we will keep the lowest tier for free to claim. 
+
+The PowerUps are limited in volume, so be sure to get your PowerUps while supplies last!
+
+## VII. Leaderboard
+[To come…stay tuned!]
+
+## VIII. How do I claim my airdrop?
+More information about our token launch will be released very soon. Until then, keep farming points and prepare for the Airdrop. So, dear MoonFarmers, let the harvesting begin…and happy farming! 
