--- a/creating-campaign/ticketing/createevent.mdx
+++ b/creating-campaign/ticketing/createevent.mdx
@@ -4,7 +4,7 @@ title: 'Creating an Event'
 
 Before you can create and issue tickets, you must first create a corresponding event. 
 
-<Info>Event creators are limited to creating 2 events. To create more than 2 events, please contact us via [email.](mailto:support@moongate.id)</Info>
+<Info>Event creators are limited to creating 2 events. If you'd like to create more than 2 events, please contact us via [email.](mailto:support@moongate.id)</Info>
 
 <Steps>  
   <Step title="Register your event">
