--- a/user-guide/the-basics/signup-login.mdx
+++ b/user-guide/the-basics/signup-login.mdx
@@ -11,11 +11,11 @@ does not currently support in-app browsers.
                 https://app.moongate.id
             </Step>
             <Step title="Enter your email address">
-                <img src="/user-guide/images/the-basics/signup-login/email-login.avif"/>
+                <img src="/user-guide/images/the-basics/signup-login/email-login.gif"/>
             </Step>
             <Step title="Open one-time sign-in link">
                 Check your inbox for an email containing a one-time sign-in link. Click the link to log in.
-                <img src="/user-guide/images/the-basics/signup-login/check-email.avif"/>
+                <img src="/user-guide/images/the-basics/signup-login/check-email.png"/>
             </Step>
         </Steps>
     </Tab>
