--- a/user-guide/the-basics/signup-login.mdx
+++ b/user-guide/the-basics/signup-login.mdx
@@ -14,7 +14,7 @@ does not currently support in-app browsers.
                 <img src="/user-guide/images/the-basics/signup-login/email-login.gif"/>
             </Step>
             <Step title="Open one-time sign-in link">
-                Check your inbox for an email containing a one-time sign-in link. Click the link to log in.
+                Check your inbox for an email containing a one-time sign-in passcode. Enter the passcode to sign in.
                 <img src="/user-guide/images/the-basics/signup-login/check-email.png"/>
             </Step>
         </Steps>
@@ -24,11 +24,11 @@ does not currently support in-app browsers.
             <Step title="Open the Moongate login/account creation page">
                 https://app.moongate.id
             </Step>
-            <Step title="Select 'Google Login'">
-                <img src="/user-guide/images/the-basics/signup-login/google-login.avif"/>
+            <Step title="Select 'Google'">
+                <img src="/user-guide/images/the-basics/signup-login/google-login.png"/>
             </Step>
             <Step title="Select a Google account to sign into Moongate with">
-                You will be brought to the Google account selection page. If you are signed into only one Google account, you will 
+                You will be brought to the Google account selection page. Select the Google account that you wish to sign in with. If you are signed into only one Google account, you will 
                 automatically be signed into Moongate.
             </Step>
         </Steps>
@@ -38,19 +38,22 @@ does not currently support in-app browsers.
             <Step title="Open the Moongate login/account creation page">
                 https://app.moongate.id
             </Step>
-            <Step title="Select 'Connect Wallet'">
-                <img src="/user-guide/images/the-basics/signup-login/connect-wallet.avif"/>
+            <Step title="Select 'Wallet'">
+                <img src="/user-guide/images/the-basics/signup-login/connect-wallet.png"/>
             </Step>
             <Step title="Select your wallet provider">
-                <img src="/user-guide/images/the-basics/signup-login/select-wallet-provider.avif"/>
+                <img src="/user-guide/images/the-basics/signup-login/select-wallet-provider.png"/>
             </Step>
             <Step title="Log into and connect your wallet to Moongate">
+                Confirm that you are connecting to the desired wallet.
+                <img src="/user-guide/images/the-basics/signup-login/check-wallet.png"/>
+                
                 Follow the subsequent login instructions from your wallet provider to connect Moongate to your wallet.
             </Step>
             <Step title="Enter your email address">
                 Enter your email address on Moongate when prompted. **You will use this email address to sign into Moongate 
                 in the future** (see the "Email Login" tab on this page).
-                <img src="/user-guide/images/the-basics/signup-login/wallet-flow-email.avif"/>
+                <img src="/user-guide/images/the-basics/signup-login/wallet-flow-email.png"/>
                 <Tip>
                     To connect your existing wallet to your existing Moongate account, see the [Managing Your Wallet](/user-guide/managing-wallet/connecting-wallet) section.
                 </Tip>
