--- a/user-guide/the-basics/signup-login.mdx
+++ b/user-guide/the-basics/signup-login.mdx
@@ -53,7 +53,7 @@ does not currently support in-app browsers.
             <Step title="Enter your email address">
                 Enter your email address on Moongate when prompted. **You will use this email address to sign into Moongate 
                 in the future** (see the "Email Login" tab on this page).
-                <img src="/user-guide/images/the-basics/signup-login/wallet-flow-email.png"/>
+                <img src="/user-guide/images/the-basics/signup-login/wallet-delegate-flow-email.png"/>
                 <Tip>
                     To connect your existing wallet to your existing Moongate account, see the [Managing Your Wallet](/user-guide/managing-wallet/connecting-wallet) section.
                 </Tip>
@@ -61,5 +61,27 @@ does not currently support in-app browsers.
         </Steps>
     </Tab>
     <Tab title="Delegate Cash">
+        <Steps>
+            <Step title="Open the Moongate login/account creation page">
+                https://app.moongate.id
+            </Step>
+            <Step title="Select 'Delegate'">
+                <img src="/user-guide/images/the-basics/signup-login/connect-wallet.png"/>
+            </Step>
+            <Step title="Select your wallet provider">
+                <img src="/user-guide/images/the-basics/signup-login/select-wallet-provider.png"/>
+            </Step>
+            <Step title="Log into and connect your wallet to Moongate">
+                Confirm that you are connecting to the desired wallet.
+                <img src="/user-guide/images/the-basics/signup-login/check-wallet.png"/>
+                
+                Follow the subsequent login instructions from your wallet provider to connect Moongate to your wallet.
+            </Step>
+            <Step title="Enter your email address">
+                Enter your email address on Moongate when prompted. **You will use this email address to sign into Moongate 
+                in the future** (see the "Email Login" tab on this page).
+                <img src="/user-guide/images/the-basics/signup-login/wallet-delegate-flow-email.png"/>                
+            </Step>
+        </Steps>
     </Tab>
 </Tabs>
