--- a/user-guide/the-basics/benefits.mdx
+++ b/user-guide/the-basics/benefits.mdx
@@ -1,11 +1,11 @@
 ---
-title: 'Benefits'
+title: 'Redeeming Benefits'
 ---
 NFT tickets and membership passes may unlock associated benefits, such as discount codes, free tickets, exclusive merchandise, etc, both now and in the future. These benefits can be accessed from the Benefit page on the Moongate Portal.
 
 <Steps>
     <Step title="Navigate to the 'Benefit' tab">
-        <img height="446" width="336" src="/user-guide/images/the-basics/benefits/benefit tab.avif"/>
+        <img height="446" width="336" src="/user-guide/images/the-basics/benefits/benefit tab.png"/>
         https://app.moongate.id/benefits
     </Step>
     <Step title="Select benefit to be claimed">
@@ -15,6 +15,6 @@ NFT tickets and membership passes may unlock associated benefits, such as discou
     <Step title="Claim and redeem the benefit">
         Click 'Claim', then follow the instructions in the subsequent pop-up message to successfully redeem your benefit. The instructions 
         can be reaccessed later by clicking the benefit again.
-        <img src="/user-guide/images/the-basics/benefits/pop-up.avif"/>
+        <img src="/user-guide/images/the-basics/benefits/pop-up.png"/>
     </Step>    
 </Steps>
