check-in changes

--- a/user-guide/the-basics/user-check-in-guide.mdx
+++ b/user-guide/the-basics/user-check-in-guide.mdx
@@ -4,7 +4,7 @@ title: 'Checking Into Events/Proving Membership'
 <Steps>
     <Step title="Click 'Check in'">
         Open the '[Pass](https://app.moongate.id)' page on the Moongate portal and click 'Check in'.
-        <img src="/user-guide/images/the-basics/user-check-in-guide/check in button.avif"/>
+        <img src="/user-guide/images/the-basics/user-check-in-guide/check in button.png"/>
     </Step>
     <Step title="Present your QR code">
         Simply present the pop-up QR code to the event/membership check-in staff to scan. This QR code will work for 
@@ -13,7 +13,7 @@ title: 'Checking Into Events/Proving Membership'
         <Info>
             To combat ticketing fraud, this QR code will refresh every 15 seconds. It can also be manually refreshed by 
             clicking the "Refresh" button at the bottom of the pop-up window.
-            <img src="/user-guide/images/the-basics/user-check-in-guide/refresh.avif"/>
+            <img src="/user-guide/images/the-basics/user-check-in-guide/refresh.png"/>
         </Info>
         <Info>
             You will also have received a confirmation email when you purchased your ticket/membership pass. This email 
