--- a/user-guide/managing-wallet/connecting-wallet.mdx
+++ b/user-guide/managing-wallet/connecting-wallet.mdx
@@ -3,15 +3,15 @@ title: 'Connecting an Existing Wallet'
 ---
 
 <Steps>
-    <Step title="Navigate to the 'Profile' tab">
-        <img src="/user-guide/images/managing-wallet/connecting-wallet/profile button.png"/>
+    <Step title="Open the user settings panel">
+        <img src="/user-guide/images/managing-wallet/connecting-wallet/open user settings.png"/>
         https://app.moongate.id/profile
     </Step>
     <Step title="Click 'Add Wallet'">
-        <img src="/user-guide/images/managing-wallet/connecting-wallet/add wallet button.avif"/>
+        <img src="/user-guide/images/managing-wallet/connecting-wallet/add wallet button.png"/>
     </Step>
     <Step title="Select your wallet provider">
-        <img src="/user-guide/images/managing-wallet/connecting-wallet/choose wallet.avif"/>
+        <img src="/user-guide/images/managing-wallet/connecting-wallet/choose wallet.png"/>
     </Step>
     <Step title="Authorize Moongate to connect to your wallet">
         Follow the subsequent instructions from your wallet provider to connect Moongate to your wallet.
