--- a/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
+++ b/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
@@ -31,7 +31,8 @@ description: 'Gain custody of and manage your automatically generated wallet.'
 </Accordion>
 
 <Accordion title="Signing into DApps With Your Wallet">
-    <Steps>
+    <Warning>Your non-custodial wallet must have been claimed before you can use it to sign into DApps.</Warning>
+    <Steps>        
         <Step title="Confirm the DApp supports Particle Wallet sign in">     
             Check your DApp's sign-in options.       
             <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/dapp connect.png"/>
