--- a/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
+++ b/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
@@ -14,8 +14,7 @@ description: 'Gain custody of and manage your automatically generated wallet.'
 <Accordion title="Claiming Your Non-Custodial Wallet">
     <Steps>    
         <Step title="Access your non-custodial wallet">
-            Sign into the Moongate Portal and navigate to the ['Profile' tab](https://app.moongate.id/profile). 
-            Click the arrow under 'Wallet' and then 'Manage Assets' to be taken to your non-custodial wallet.
+            Open the user settings panel and then click 'Manage' to be taken to your non-custodial wallet.
             <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/manage assets button.gif"/>
         </Step>
         <Step title="Verify your wallet via email or phone number">
