--- a/user-guide/managing-wallet/transferring-nft.mdx
+++ b/user-guide/managing-wallet/transferring-nft.mdx
@@ -12,8 +12,7 @@ title: 'Transferring a Ticket/Membership'
 </Warning>
 <Steps>    
     <Step title="Access your non-custodial wallet">
-        Sign into the Moongate Portal and navigate to the ['Profile' tab](https://app.moongate.id/profile). 
-        Click the arrow under 'Wallet' and then 'Manage Assets' to be taken to your non-custodial wallet.
+        Open the user settings panel and then click 'Manage' to be taken to your non-custodial wallet.
         <img src="/user-guide/images/managing-wallet/transferring-nft/manage assets button.gif"/>
     </Step>
     <Step title="Select the NFT you wish to transfer">
