--- a/user-guide/the-basics/benefits.mdx
+++ b/user-guide/the-basics/benefits.mdx
@@ -1,10 +1,10 @@
 ---
 title: 'Redeeming Benefits'
 ---
-NFT tickets and membership passes may unlock associated benefits, such as discount codes, free tickets, exclusive merchandise, etc, both now and in the future. These benefits can be accessed from the 'Benefit' tab on the Moongate Portal.
+NFT tickets and membership passes may unlock associated benefits, such as discount codes, free tickets, exclusive merchandise, etc, both now and in the future. These benefits can be accessed from the 'Benefits' tab on the Moongate Portal.
 
 <Steps>
-    <Step title="Navigate to the 'Benefit' tab">
+    <Step title="Navigate to the 'Benefis' tab">
         <img height="446" width="336" src="/user-guide/images/the-basics/benefits/benefit tab.png"/>
         https://app.moongate.id/benefits
     </Step>
