--- a/user-guide/managing-wallet/transferring-nft.mdx
+++ b/user-guide/managing-wallet/transferring-nft.mdx
@@ -6,6 +6,11 @@ title: 'Transferring a Ticket/Membership'
     using your own wallet to receive tickets/memberships from Moongate, please refer to your wallet provider's documentation for 
     information on conducting transfers.
 </Info>
+<Info>
+    If you have received an NFT ticket in an external wallet for an event that is ticketed by Moongate or an NFT membership pass 
+    for a membership program administered by Moongate but **do not have a Moongate account**, follow [these instructions](/user-guide/the-basics/signup-login)
+    to create a Moongate account connected to your existing wallet. Afterwards your NFT ticket/membership pass should be displayed on Moongate. 
+</Info>
 <Warning>
     **Please note:** Moongate has no administrative control over your wallet and its contents, and as such is unable to facilitate any 
     transfers on your behalf.
