--- a/user-guide/managing-wallet/transferring-nft.mdx
+++ b/user-guide/managing-wallet/transferring-nft.mdx
@@ -4,12 +4,17 @@ title: 'Transferring a Ticket/Membership'
 <Info>
     This guide is intended for users whose wallets are the non-custodial variety automatically created by Moongate. If you are 
     using your own wallet to receive tickets/memberships from Moongate, please refer to your wallet provider's documentation for 
-    information on conducting transfers.
+    information on conducting NFT transfers.
+    - [Metamask](https://support.metamask.io/hc/en-us/articles/360058961911-How-do-I-send-receive-or-cash-out-an-NFT#:~:text=YellowHeart%2C%20etc.-,Sending%20an%20NFT,-Sending%20an%20NFT)
+    - [OKX Wallet](https://www.okx.com/help/how-do-i-use-okx-nft#:~:text=complete%20the%20operation-,Transfer%20NFTs,-Select%20NFTs%20and)
+    - [Bitget Wallet](https://web3.bitget.com/en/academy/how-to-transfer-nfts-how-to-list-an-nft-for-sale#:~:text=2022%2D08%2D11-,1.%20Transfer,-1)%20Go%20to)
+    - [Bybit Wallet](https://www.bybit.com/en/help-center/article/How-to-Withdraw-Your-NFT-from-Bybit)
+    - [OneKey](https://help.onekey.so/hc/en-us/articles/9159188814863-Send-and-Receive-crypto-assets-in-OneKey-App)
 </Info>
 <Info>
-    If you have received an NFT ticket in an external wallet for an event that is ticketed by Moongate or an NFT membership pass 
-    for a membership program administered by Moongate but **do not have a Moongate account**, follow [these instructions](/user-guide/the-basics/signup-login)
-    to create a Moongate account connected to your existing wallet. Afterwards your NFT ticket/membership pass should be displayed on Moongate. 
+    If you have received either an NFT ticketfor an event ticketed by Moongate or an NFT membership pass for a membership program 
+    administered by Moongate in an external wallet  but **do not have a Moongate account**, follow [these instructions](/user-guide/the-basics/signup-login)
+    to create a Moongate account connected to your existing wallet. Afterwards, your NFT ticket/membership pass should be displayed on Moongate. 
 </Info>
 <Warning>
     **Please note:** Moongate has no administrative control over your wallet and its contents, and as such is unable to facilitate any 
