--- a/user-guide/managing-wallet/transferring-nft.mdx
+++ b/user-guide/managing-wallet/transferring-nft.mdx
@@ -8,7 +8,7 @@ title: 'Transferring a Ticket/Membership'
 <Info>
     This guide is intended for users whose wallets are the non-custodial variety automatically created by Moongate. If you are 
     using your own wallet to receive tickets/memberships from Moongate, please refer to your wallet provider's documentation for 
-    information on conducting NFT transfers.
+    information on conducting NFT transfers. We've attached the documentation for several popular wallet providers below.
     - [Metamask](https://support.metamask.io/hc/en-us/articles/360058961911-How-do-I-send-receive-or-cash-out-an-NFT#:~:text=YellowHeart%2C%20etc.-,Sending%20an%20NFT,-Sending%20an%20NFT)
     - [OKX Wallet](https://www.okx.com/help/how-do-i-use-okx-nft#:~:text=complete%20the%20operation-,Transfer%20NFTs,-Select%20NFTs%20and)
     - [Bitget Wallet](https://web3.bitget.com/en/academy/how-to-transfer-nfts-how-to-list-an-nft-for-sale)
