Hey hey hey hey

--- a/user-guide/managing-wallet/transferring-nft.mdx
+++ b/user-guide/managing-wallet/transferring-nft.mdx
@@ -16,8 +16,7 @@ title: 'Transferring a Ticket/Membership'
     - [OneKey](https://help.onekey.so/hc/en-us/articles/9159188814863-Send-and-Receive-crypto-assets-in-OneKey-App)
 </Info>
 <Info>
-    If you have received either an NFT ticketfor an event ticketed by Moongate or an NFT membership pass for a membership program 
-    administered by Moongate in an external wallet  but **do not have a Moongate account**, follow [these instructions](/user-guide/the-basics/signup-login)
+    If you have received an NFT ticket/membership pass for a campaign administered by Moongate in an external wallet but **do not have a Moongate account**, follow [these instructions](/user-guide/the-basics/signup-login)
     to create a Moongate account connected to your existing wallet. Afterwards, your NFT ticket/membership pass should be displayed on Moongate. 
 </Info>
 <Steps>    
