--- a/user-guide/managing-wallet/transferring-nft.mdx
+++ b/user-guide/managing-wallet/transferring-nft.mdx
@@ -14,6 +14,7 @@ title: 'Transferring a Ticket/Membership'
     - [Bitget Wallet](https://web3.bitget.com/en/academy/how-to-transfer-nfts-how-to-list-an-nft-for-sale)
     - [Bybit Wallet](https://www.bybit.com/en/help-center/article/How-to-Withdraw-Your-NFT-from-Bybit)
     - [OneKey](https://help.onekey.so/hc/en-us/articles/9159188814863-Send-and-Receive-crypto-assets-in-OneKey-App)
+    - [XDEFI](https://www.xdefi.io/article/manage-nfts/)
 </Info>
 <Info>
     If you have received an NFT ticket/membership pass for a campaign administered by Moongate in an external wallet but **do not have a Moongate account**, follow [these instructions](/user-guide/the-basics/signup-login)
@@ -34,8 +35,7 @@ title: 'Transferring a Ticket/Membership'
             If your asset value = $0, you'll need to top it up with credits to cover the transfer fee. You can do this by clicking "Buy" 
             and purchasing credits using a credit/debit card, or transferring funds from another wallet.
             
-            **NOTE:** the minimum credit 
-            purchase amount will likely be higher than the transfer fee.
+            **NOTE:** the minimum credit purchase amount will likely be higher than the transfer fee.
             <img src="/user-guide/images/managing-wallet/transferring-nft/view gas credits.avif"/>
         </Info>
     </Step>
