--- a/user-guide/managing-wallet/transferring-nft.mdx
+++ b/user-guide/managing-wallet/transferring-nft.mdx
@@ -18,7 +18,7 @@ title: 'Transferring a Ticket/Membership'
 </Info>
 <Info>
     If you have received an NFT ticket/membership pass for a campaign administered by Moongate in an external wallet but **do not have a Moongate account**, follow [these instructions](/user-guide/the-basics/signup-login)
-    to create a Moongate account connected to your existing wallet. Afterwards, your NFT ticket/membership pass should be displayed on Moongate. 
+    to create a Moongate account connected to your existing wallet. Once connected, your NFT ticket/membership pass should be displayed on Moongate and [check-in functionality](/user-guide/the-basics/user-check-in-guide) should work as expected.
 </Info>
 <Steps>    
     <Step title="Access your non-custodial wallet">
