--- a/user-guide/managing-wallet/transferring-nft.mdx
+++ b/user-guide/managing-wallet/transferring-nft.mdx
@@ -11,6 +11,7 @@ title: 'Transferring a Ticket/Membership'
     information on conducting NFT transfers. We've attached the documentation for several popular wallet providers below.
     - [Metamask](https://support.metamask.io/hc/en-us/articles/360058961911-How-do-I-send-receive-or-cash-out-an-NFT#:~:text=YellowHeart%2C%20etc.-,Sending%20an%20NFT,-Sending%20an%20NFT)
     - [OKX Wallet](https://www.okx.com/help/how-do-i-use-okx-nft#:~:text=complete%20the%20operation-,Transfer%20NFTs,-Select%20NFTs%20and)
+    - [Rainbow Wallet](https://rainbow.me/en/support/app/send-an-nft)
     - [Bitget Wallet](https://web3.bitget.com/en/academy/how-to-transfer-nfts-how-to-list-an-nft-for-sale)
     - [Bybit Wallet](https://www.bybit.com/en/help-center/article/How-to-Withdraw-Your-NFT-from-Bybit)
     - [OneKey](https://help.onekey.so/hc/en-us/articles/9159188814863-Send-and-Receive-crypto-assets-in-OneKey-App)
