--- a/user-guide/support/user-faq.mdx
+++ b/user-guide/support/user-faq.mdx
@@ -40,6 +40,14 @@ title: 'User FAQs'
         Please ensure that you are logged in with the same account that you used to purchase the NFT tickets. If you continue to experience issues, please 
         [contact us](mailto:support@moongate.id).
     </Accordion>
+    <Accordion title="I can't see my NFT ticket/membership in my wallet.">
+        There are a number of common reasons that this may occur.
+        1. You haven't configured your wallet to display NFTs on the same chain that the NFT ticket/membership is deployed on.
+        Moongate often deploys on the Polygon, BNB Chain, Arbitrum, Avalanche, and XLayer chains, so try adding those. We recommend referring to your wallet
+        provider's documentation for instructions. As an example, here's [how to add a new chain on Metamask](https://support.metamask.io/hc/en-us/articles/360043227612-How-to-add-a-custom-network-RPC#h_01G63GGCJH5GCYDYPH5RNWNZQ8).
+        2. You are checking a wallet which you haven't connected to Moongate. This is often the case if you signed up to Moongate using email or Google login, 
+        as we automatically create a non-custodial wallet for users who sign up via these methods. Simply log into the [Moongate user portal](app.moongate.id) and check the 'Pass' page.
+    </Accordion>
     <Accordion title="I can't log into the Moongate Verify mobile application.">
         The Moongate Verify mobile application is intended for event hosts – you shouldn't have to use it! As a general user, please instead visit your 
         user portal and tap 'Check in" to check into your event – more information on that [here](/user-guide/the-basics/user-check-in-guide).
