--- a/user-guide/support/user-faq.mdx
+++ b/user-guide/support/user-faq.mdx
@@ -42,10 +42,15 @@ title: 'User FAQs'
     </Accordion>
     <Accordion title="I can't see my NFT ticket/membership in my wallet.">
         There are a number of common reasons that this may occur.
-        1. You haven't configured your wallet to display NFTs on the same chain that the NFT ticket/membership is deployed on.
+        1. **You haven't configured your wallet to display NFTs on the same chain that the NFT ticket/membership is deployed on.**
+        
         Moongate often deploys on the Polygon, BNB Chain, Arbitrum, Avalanche, and XLayer chains, so try adding those. We recommend referring to your wallet
         provider's documentation for instructions. As an example, here's [how to add a new chain on Metamask](https://support.metamask.io/hc/en-us/articles/360043227612-How-to-add-a-custom-network-RPC#h_01G63GGCJH5GCYDYPH5RNWNZQ8).
-        2. You are checking a wallet which you haven't connected to Moongate. This is often the case if you signed up to Moongate using email or Google login, 
+        Refresh your wallet after adding the new chain and the NFT ticket/membership should appear. If it still doesn't, you might 
+        need to manually import the NFT.
+        2. **You are checking a wallet which you haven't connected to Moongate.**
+        
+        This is often the case if you signed up to Moongate using email or Google login, 
         as we automatically create a non-custodial wallet for users who sign up via these methods. Simply log into the [Moongate user portal](app.moongate.id) and check the 'Pass' page.
     </Accordion>
     <Accordion title="I can't log into the Moongate Verify mobile application.">
