--- a/user-guide/support/user-faq.mdx
+++ b/user-guide/support/user-faq.mdx
@@ -45,11 +45,11 @@ title: 'User FAQs'
         1. **You haven't configured your wallet to display NFTs on the same chain that the NFT ticket/membership is deployed on.**
         Moongate often deploys on the Polygon, BNB Chain, Arbitrum, Avalanche, and XLayer chains, so try adding those. We recommend referring to your wallet
         provider's documentation for instructions. As an example, here's [how to add a new chain on Metamask](https://support.metamask.io/hc/en-us/articles/360043227612-How-to-add-a-custom-network-RPC#h_01G63GGCJH5GCYDYPH5RNWNZQ8).
-        Refresh your wallet after adding the new chain and the NFT ticket/membership should appear. If it still isn't appearing, you might 
-        need to manually import the NFT.
+        Refresh your wallet after adding the new chain and the NFT ticket/membership should appear.
         <Frame caption="How to manually add an NFT to a Metamask wallet">
             <img src="/user-guide/images/support/user-faq/manually add nft.gif"/>
         </Frame>
+        If it still isn't appearing, you might need to manually import the NFT. Please refer to your wallet provider's documentation for instructions.
         2. **You are checking a wallet which you haven't connected to Moongate.**
         
         This is often the case if you signed up to Moongate using email or Google login, 
